website/versioned_docs/version-2.1.x/reference/subsystems/isort.mdx
---
title: isort
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Python import sorter tool (https://timothycrosley.github.io/isort/).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[isort]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]isort-skip`}
  env_repr="PANTS_ISORT_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use isort when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 fmt` and
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`.
</Option>

### `args`

<Option
  cli_repr={`--isort-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_ISORT_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to isort, e.g. `--isort-args="--case-sensitive
  --trailing-comma"`.
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--isort-version=<str>`}
  env_repr="PANTS_ISORT_VERSION"
  default_repr={`isort[pyproject]>=5.5.1,<5.6`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--isort-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_ISORT_EXTRA_REQUIREMENTS"
  default_repr={`["setuptools"]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `entry_point`

<Option
  cli_repr={`--isort-entry-point=<str>`}
  env_repr="PANTS_ISORT_ENTRY_POINT"
  default_repr={`isort.main`}
>
  The main module for the tool. Usually, you will not want to change this from
  the default.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--isort-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_ISORT_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.6"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `config`

<Option
  cli_repr={`--isort-config="[<file_option>, <file_option>, ...]"`}
  env_repr="PANTS_ISORT_CONFIG"
  default_repr={`[]`}
>
  Path to `isort.cfg` or alternative isort config file(s).
</Option>

## Deprecated options

None

</span>
